--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ matplotlib==3.7.1
 pandas==1.5.3
 requests==2.31.0
 spacy==3.5.2
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 streamlit==1.31.1
